i create my deals or discount section

--- a/index.html
+++ b/index.html
@@ -155,5 +155,67 @@
     </div>
 </div> 
 </div>
+
+<!-- deals or discount section -->
+
+<div class="deals">
+    <h1>Deals & Discount</h1>
+    <p>Dear customer we have world class service center and world class travel. <br>
+     You can enjoy any of our tours with peace of mind.</p>
+</div><br><br><br>
+
+ <section class="img-over-box-container">
+     <div class="img-container">
+         <img src="B9A2-Hero-Travel-main/Images/Group 39.png" alt="">
+          <div class="over-box-container">
+           <div class="img-over-box-1-3">
+            <p><i class="fa-solid fa-clock"></i>7 Day / 6 Night
+                <i class="fa-solid fa-users"></i>  Max: 10 
+                <i class="fa-solid fa-location-dot"></i>Malaysia</p>
+            <h2>Tour To Satorini</h2>
+            <p>Everyone should travel. Because traveling gives <br>
+              people peace both mentally and physically. <br>
+              If you want to travel then you can contact us. Please book now.
+            
+            </p>
+            <h3 class="price">Price: $1300-$1500</h3>
+            <button class="btn-primary-content">Book Now</button>
+           </div>
+        </div>
+    </div><br>
+
+    <div class="img-container">
+          <img src="B9A2-Hero-Travel-main/Images/Group 39.png" alt="">
+            <div class="img-over-box-2">
+             <p><i class="fa-solid fa-clock"></i>7 Day / 6 Night
+              <i class="fa-solid fa-users"></i>  Max: 10 
+               <i class="fa-solid fa-location-dot"></i>Malaysia</p>
+            <h2>Tour To Satorini</h2>
+          <p>Everyone should travel. Because traveling gives <br>
+            people peace both mentally and physically. <br>
+             If you want to travel then you can contact us. Please book now.</p>
+           <h3 class="price">Price: $1300-$1500</h3>
+           <button class="btn-primary-content">Book Now</button>
+       </div>
+    </div><br>
+    
+    <div class="img-container">
+           <img src="B9A2-Hero-Travel-main/Images/Group 39.png" alt="">
+            <div class="img-over-box-1-3">
+             <p><i class="fa-solid fa-clock"></i>7 Day / 6 Night <span></span>
+             <i class="fa-solid fa-users"></i>  Max: 10 
+            <i class="fa-solid fa-location-dot"></i>Malaysia</p>
+           <h2>Tour To Satorini</h2>
+           <p>Everyone should travel. Because traveling gives <br>
+             people peace both mentally and physically. <br>
+              If you want to travel then you can contact us. Please book now.</p>
+             <h3 class="price">Price: $1300-$1500</h3>
+           <button class="btn-primary-content">Book Now</button>
+        </div>
+    </div><br>
+</section>
+<div class="see-all-packages">
+    <button class="btn-primary">See All Packages</button>
+</div>
 </body>
 </html>
