this is my mountain description and login section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+
 <!-- navbar section -->
+
     <header>
         <nav class="container">
             <div class="nav-img-title">
@@ -27,7 +29,9 @@
             </ul>
         </nav>
     </header>
+
 <!-- banner section -->
+
     <div class="banner">
         <div class="main-container">
             <img src="B9A2-Hero-Travel-main/Images/Group 13 (1) (1).png" alt="">
@@ -45,7 +49,9 @@
             </div>
         </div>
     </div>
+
 <!-- himalayan section -->
+
     <div class="kashmir">
             <img src="B9A2-Hero-Travel-main/Images/Rectangle 4.png" alt=""
               height=400 width=500 style="float: right;">
@@ -70,7 +76,9 @@
              <button class="btn-primary-content">Read More</button>
         </div>
     </div>
+
 <!-- image gird section -->
+
 <div class="choose">
         <div>
             <h1 class="C3">Choose Your Destination</h1>
@@ -121,6 +129,7 @@
 </div>
 
 <!-- box desgin section -->
+
 <div class="many">
     <h1>Why Choose Us</h1>
     <p>Dear customer we have world class service center and world class travel center. </p>
@@ -217,5 +226,57 @@
 <div class="see-all-packages">
     <button class="btn-primary">See All Packages</button>
 </div>
+
+<!-- mountain section -->
+ 
+<section>
+    <div class="mountain-container">
+        <div class="mountain">
+          <div class="mountain-1">
+              <img src="B9A2-Hero-Travel-main/Images/Group 40089.png" alt=""
+                height=450 width=700 style="float: right;">
+              <h2>Watch Our Mountain in <br> Bangladesh</h2>
+            </div> 
+        </div>  
+
+        <div class="mountain-text">
+            <h1 class="line">A Simple Perfect Place To Get Lost</h1>
+           <p class="line">Amet consectetur. Vulputate commodo felis molesite risus omare <br> mulla 
+              amet et . libero commodo sagittis dignissim adipiscing quis.</p>
+        <ul>
+            <li class="line">Adipiscing arnare pellentesque mauris volutpat tortor vitae <br>
+               platea porta lacus. Lectus supendisse nullam</li><br>
+
+            <li class="line">Adipiscing arnare pellentesque mauris volutpat tortor vitae <br>
+               platea porta lacus. Lectus supendisse nullam</li>
+        </ul>
+         <button>See More</button>
+        </div>
+
+    </div>
+</section>
+
+<!--login section -->
+
+<section class="advancd">
+    <div class="rotate-img-1">
+        <img src="B9A2-Hero-Travel-main/Images/Rectangle 8 (1).png" alt=""
+              height="430" width="600" style="float: right;">
+              <div class="rotate-img-2">
+            <p>Travel.com <br> <span>Save up to 70%</span> </p>
+       </div>
+    </div>
+
+    <div class="">
+        <form class="login-form-container">
+            <h1>Newsletter</h1>
+            <p>Get your daily dose of travel news & tips.Sign <br>up today!</p>
+            <hr>
+            <input type=" text" placeholder="Enter your name"><br><br>
+            <input type="email" placeholder="Enter your email"><br><br>
+            <button>Subscribe</button>
+        </form>
+    </div>
+</section>    
 </body>
 </html>
