footer section added

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 </div>
 
 <!-- mountain section -->
- 
+
 <section>
     <div class="mountain-container">
         <div class="mountain">
@@ -266,7 +266,6 @@
             <p>Travel.com <br> <span>Save up to 70%</span> </p>
        </div>
     </div>
-
     <div class="">
         <form class="login-form-container">
             <h1>Newsletter</h1>
@@ -277,6 +276,28 @@
             <button>Subscribe</button>
         </form>
     </div>
-</section>    
+</section>
+
+<!-- footer section -->
+    
+<footer class="footer-container">
+    <div class="footer-container-1">
+        <img src="B9A2-Hero-Travel-main/Images/Group 40071 (2).png" alt=""
+        height="50" width="80" style="float: left;">
+       <h1>Royal <span>Travel</span></h1>
+    </div>
+   <div class="footer-container-2">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Amet consequuntur sequi recusandae, a consequatur doloremque 
+            eligendi est voluptate tempora, maxime quidem doloribus, <br>
+            corrupti possimus vitae nobis suscipit officiis molestias ipsam.</p><br>
+            <img class="sp" src="B9A2-Hero-Travel-main/Images/twitter-icon.webp" alt="">
+            <img class="sp" src="B9A2-Hero-Travel-main/Images/facebook.png" alt="">
+            <img class="sp" src="B9A2-Hero-Travel-main/Images/instagram-53.png" alt="">
+            <img class="sp" src="B9A2-Hero-Travel-main/Images/github-logo.png" alt=""><br><br><br>
+            <hr width="70%"><br><br><br>
+            <p>2017, All Rights Reserved</p>
+    </div>
+</footer>
 </body>
 </html>
