--- a/index.html
+++ b/index.html
@@ -165,6 +165,22 @@
 </div> 
 </div>
 
+<!-- this category is created by me -->
+
+     <div class="new-content">
+        <div class="new-content-text">
+            <h1>This category is created by me</h1>
+            <p>This is our restaurant section. You can buy all kinds of food from here. 
+                You can get burgers, pizza, biryani, chicken, coconut etc. from here.</p>
+        </div>
+        <div class="food-img-section">
+            <img src="B9A2-Hero-Travel-main/Images/meats.avif" alt="">
+            <img src="B9A2-Hero-Travel-main/Images/fish.avif" alt="">
+            <img src="B9A2-Hero-Travel-main/Images/pizzas.avif" alt="">
+            <img src="B9A2-Hero-Travel-main/Images/coco.avif" alt="">
+        </div>
+     </div>
+
 <!-- deals or discount section -->
 
 <div class="deals">
